Complete database exercise